feat: 로그인 기능 추가
- 로그인 기능:
 1. 아이디 확인하여 사용자 조회
 2. 삭제된 계정인지, 비밀번호 일치하는지 확인
 3. 토큰 생성
- 로그인 요청/응답 DTO 생성
- PasswordEncoder 클래스 생성: 비밀번호 암호화 및 일치 여부 확인 메서드
- 비밀번호 암호화를 위한 의존성 추가
- 예외 메시지 enum 추가

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.12.5" // JSON 직렬화
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'at.favre.lib:bcrypt:0.10.2'
 }
 
 tasks.named('test') {
