--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
     compileOnly 'org.projectlombok:lombok'
@@ -39,8 +41,6 @@ dependencies {
     implementation "io.jsonwebtoken:jjwt-api:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.12.5" // JSON 직렬화
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'at.favre.lib:bcrypt:0.10.2'
 }
 
 tasks.named('test') {
